# EasyAudioFlip

./: .gitignore  LICENSE  README.ja.md  README.md  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml
.claude/commands/: release.md
.github/workflows/: build.yml  ci.yml  release.yml
.serena/: project.yml
scripts/: bump-version.mjs  generate-icon.mjs  release.mjs
src/: index.html  panel.css  panel.html  panel.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  main.rs  tray.rs
